--- a/hhh/assign.html
+++ b/hhh/assign.html
@@ -11,13 +11,13 @@
 <form id="form1" name="form1" method="post" action="">
 
 <div class="container">
-  <div class="content-box1">
+	<div class="content-box1">
     <p>Filters
     <input type="button" id="filter-reset" value="Reset" onclick="myPress('filter-reset');"/>
     </p>
     <!-- end .content -->
   </div>
-  <div class="content-box2">
+	<div class="content-box2">
       <input type="button" id="day-rh1" value="Rosh 1" onclick="myPress('day-rh1');"/>
       <input type="button" id="day-kn" value="Kol Nidre" onclick="myPress('day-kn');"/>
       <input type="button" id="day-ykpm" value="YK - PM" onclick="myPress('day-ykpm');"/>
@@ -27,7 +27,7 @@
       <input type="button" id="day-all" value="All" onclick="myPress('day-all');"/>      
   <!-- end .content -->
   </div>
-  <div class="content-box3">
+	<div class="content-box3">
       <input type="button" id="opt-cohen" value="Cohen" onclick="myPress('opt-cohen');"/>
       <input type="button" id="opt-board" value="Board" onclick="myPress('opt-board');"/>
       <input type="button" id="opt-staff" value="Staff" onclick="myPress('opt-staff');"/>
@@ -42,17 +42,21 @@
       <input type="button" id="opt-all" value="All" onclick="myPress('opt-all');"/>      
 </div>
 <hr />
-<div class="cong-box1">
-<p>Honors</p>
-<div id="honors">
-</div>
-</div>
-<div class="cong-box2">
-<p>Mode</p>
-</div>
-<div class="cong-box3">
-<p>Congregants</p>
-</div>
+	<div class="cong-box1">
+    <p>Honors</p>
+    <textarea name="honors" id="honors" cols="60" rows="50"></textarea>
+    </div>
+	<div class="cong-box2">
+    <p>Mode</p>
+    <input name="mode-view" type=submit id="mode-view" value="View" /><br />
+    <input name="mode-assign" type=submit id="mode-assign" value="Assign" /><br /><br /><br /><br />
+    <input name="mode-adddel" type=submit id="mode-adddel" value="Add/Del" /><br />
+    </div>
+	<div class="cong-box3">
+    <p>Congregants</p>
+    <textarea name="congregants" id="congregants" cols="60" rows="50">Elster, Beth & Andy
+Leavitt, Stacy & Marc</textarea>
+    </div>
 </div>
 </form>
 </body>
