--- a/hh-honors/ThankYou.html
+++ b/hh-honors/ThankYou.html
@@ -58,7 +58,7 @@
   <!-- end .MenuBar --></div>
   <div id="content">
   <!-- InstanceBeginEditable name="Content" -->
-  <p class="left">Thank you for responding to your High Holy Day honor, you should be receiving a confirmation e-mail shortly. We appreciate all of the support that you give to CBI</p>
+  <p class="left">Thank you for responding to your High Holy Day honor, you should be receiving a confirmation e-mail shortly. We appreciate all of the support that you give to CBI.</p>
   <p class="left">We wish  a Shana Tovah to you and your loved ones.</p>
   <!-- InstanceEndEditable -->
   <!-- end .content --></div>
