Ready to go for 5782

--- a/hh-honors/ThankYou.html
+++ b/hh-honors/ThankYou.html
@@ -299,7 +299,7 @@
 
                                 </nav>
 <!-- InstanceBeginEditable name="EditRegionDesktop" -->
-<p class="fltlft">Thank you for responding to your High Holy Day honor, you should be receiving<br>a confirmation e-mail shortly.
+<p style="text-align:center;">Thank you for responding to your High Holy Day honor, you should be receiving<br>a confirmation e-mail shortly.
         We appreciate all of the support that you give to CBI.<br><br>We wish a Shana Tovah to you and your loved ones.</p>
   <!-- InstanceEndEditable -->
 <!-- end .content -->
@@ -307,8 +307,8 @@
 </div>
 <!-- InstanceBeginEditable name="EditRegionPhone" -->
                     <div style="text-align:center;"><img src="assets/CBI_ner_tamid.png" alt="Congregation B'nai Israel" width="94" height="110" /></div>	
-  <p class="fltrt">Thank you for responding to your High Holy Day honor, you should be receiving a confirmation e-mail shortly. We appreciate all of the support that you give to CBI.</p>
-  <p class="fltrt">We wish  a Shana Tovah to you and your loved ones.</p>
+  <p style="text-align:center;">Thank you for responding to your High Holy Day honor, you should be receiving a confirmation e-mail shortly. We appreciate all of the support that you give to CBI.</p>
+  <p style="text-align:center;">We wish  a Shana Tovah to you and your loved ones.</p>
 					<!-- InstanceEndEditable -->
 
 </body>
