--- a/hh-honors/ThankYou.html
+++ b/hh-honors/ThankYou.html
@@ -299,16 +299,16 @@
 
                                 </nav>
 <!-- InstanceBeginEditable name="EditRegionDesktop" -->
-<p style="text-align:center;">Thank you for responding to your High Holy Day honor, you should be receiving<br>a confirmation e-mail shortly.
-        We appreciate all of the support that you give to CBI.<br><br>We wish a Shana Tovah to you and your loved ones.</p>
+<p style="text-align:center;">Thank you for responding to your High Holy Day honor and please look for an email confirmation. We appreciate
+    all of the support that you give to CBI.<br><br>We wish a Shana Tovah to you and your loved ones.</p>
   <!-- InstanceEndEditable -->
 <!-- end .content -->
     </header>
 </div>
 <!-- InstanceBeginEditable name="EditRegionPhone" -->
                     <div style="text-align:center;"><img src="assets/CBI_ner_tamid.png" alt="Congregation B'nai Israel" width="94" height="110" /></div>	
-  <p style="text-align:center;">Thank you for responding to your High Holy Day honor, you should be receiving a confirmation e-mail shortly. We appreciate all of the support that you give to CBI.</p>
-  <p style="text-align:center;">We wish  a Shana Tovah to you and your loved ones.</p>
+<p style="text-align:center;">Thank you for responding to your High Holy Day honor and please look for an email confirmation. We appreciate
+    all of the support that you give to CBI.<br><br>We wish a Shana Tovah to you and your loved ones.</p>
 					<!-- InstanceEndEditable -->
 
 </body>
